--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,14 +171,13 @@ input, select, textarea {
 			font-size: 1.65em;
 			text-align: center;
 			margin: 0 0 1em 0;
-			top: 0.775em;
+			top: -0.775em;
 		}
 
 			h2.major span {
 				background: #fff;
 				position: relative;
 				display: inline-block;
-				top: -0.775em;
 				padding: 0 1.25em 0 1.25em;
 			}
 
@@ -1968,6 +1967,7 @@ input, select, textarea {
 		list-style: none;
 		padding-left: 0;
 		cursor: default;
+		margin: -2em 0 0 0;
 	}
 
 		ul.contact li {
@@ -1978,7 +1978,6 @@ input, select, textarea {
 			position: relative;
 			display: inline-block;
 			margin: 0 0.25em 0 0.25em;
-			top: 0;
 			padding-left: 0;
 		}
 
@@ -2060,7 +2059,7 @@ input, select, textarea {
 		padding-left: 0;
 		cursor: default;
 		position: relative;
-		margin: -4em 0 -2em 0em;
+		margin: -6em 0 -2em 0em;
 	}
 
 		ul.special li {
@@ -2691,7 +2690,7 @@ input, select, textarea {
 
 	#footer {
 		text-align: center;
-		padding: 8em 0 8em 0;
+		padding: 6em 0 6em 0;
 	}
 
 		#footer a {
@@ -3119,10 +3118,14 @@ input, select, textarea {
 					margin-top: 0;
 				}
 
+
+			ul.contact li a:before{
+				font-size: 28px
+			}
 		/* Special */
 
 			ul.special {
-				margin: -0.75em 0 2em -0.75em;
+				margin: -4em 0 2em -0.75em;
 			}
 
 				ul.special li {
@@ -3130,15 +3133,15 @@ input, select, textarea {
 				}
 
 				ul.special li a:before {
-					font-size: 28px;
+					font-size: 35px;
 				}
 
 				ul.special li.saturn {
-					transform: translate(0px, 18px)
+					transform: translate(0px, 22px)
 				}
 
 				ul.special li.saturn > a.saturn{
-					font-size: 28px;
+					font-size: 35px;
 					width: 2em;
 					height: 2em;
 					transform: translate(0em, 0em)
