Fixed bug with header placements

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,7 @@ input, select, textarea {
 			font-size: 1.65em;
 			text-align: center;
 			margin: 0 0 1em 0;
-			top: -0.775em;
+			top: 0.775em;
 		}
 
 			h2.major span {
@@ -179,6 +179,7 @@ input, select, textarea {
 				position: relative;
 				display: inline-block;
 				padding: 0 1.25em 0 1.25em;
+				top:-0.775em
 			}
 
 	h3, h4 {
@@ -2059,7 +2060,7 @@ input, select, textarea {
 		padding-left: 0;
 		cursor: default;
 		position: relative;
-		margin: -6em 0 -2em 0em;
+		margin: -4em 0 -2em 0em;
 	}
 
 		ul.special li {
